Updated padding and margin for rows and containers to prevent overflow errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,11 @@ html {
     font-size: 16px;
 }
 
+.row, .container, .container-fluid { 
+    padding: 0;
+    margin: 0; 
+}
+
 /*-----------------------------------------Headers */
 
 h1 {
